--- a/AlwaysCoffeeTime/AlwaysCoffeeTime.WebAdmin/AlwaysCoffeeTime.WebAdmin.csproj
+++ b/AlwaysCoffeeTime/AlwaysCoffeeTime.WebAdmin/AlwaysCoffeeTime.WebAdmin.csproj
@@ -9,12 +9,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C88F106B-237D-405E-9A4B-389C987208F1}</ProjectGuid>
+    <ProjectGuid>{E479229F-C022-4833-B7ED-46FDE395FED3}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AlwaysCoffeeTime.Web</RootNamespace>
-    <AssemblyName>AlwaysCoffeeTime.Web</AssemblyName>
+    <RootNamespace>AlwaysCoffeeTime.WebAdmin</RootNamespace>
+    <AssemblyName>AlwaysCoffeeTime.WebAdmin</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -131,12 +131,10 @@
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
-    <Content Include="Views\Productos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ProductosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -179,9 +177,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>54177</DevelopmentServerPort>
+          <DevelopmentServerPort>55552</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:54177/</IISUrl>
+          <IISUrl>http://localhost:55552/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
