--- a/AlwaysCoffeeTime/AlwaysCoffeeTime.WebAdmin/AlwaysCoffeeTime.WebAdmin.csproj
+++ b/AlwaysCoffeeTime/AlwaysCoffeeTime.WebAdmin/AlwaysCoffeeTime.WebAdmin.csproj
@@ -164,6 +164,12 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AlwaysCoffeeTime.BL\AlwaysCoffeeTime.BL.csproj">
+      <Project>{f77213ea-c040-43be-8f6b-6fb783944490}</Project>
+      <Name>AlwaysCoffeeTime.BL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
